--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: "Vue Mess Detector"
+name: "vmd-action"
 description:
   "A static code analysis tool for detecting code smells and best practice
   violations in Vue.js and Nuxt.js projects."
