feat: improve report details

--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ inputs:
     required: false
   runArgs:
     description: "Arguments to pass to Vue Mess Detector"
+    default: "--group=file"
     required: false
   entryPoint:
     description: "Entry point for Vue Mess Detector"
