--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,10 @@ inputs:
     description: "Source directory to analyze"
     required: true
     default: "src/"
+  deleteOldComments:
+    description: "Delete old comments on pull requests?"
+    required: false
+    default: "false"
 runs:
   using: "node20"
   main: "dist/index.js"
