--- a/action.yml
+++ b/action.yml
@@ -43,10 +43,10 @@ inputs:
     description: "Delete old comments on pull requests?"
     required: false
     default: "false"
-  compareWithBranch:
-    description: "Branch to compare the analysis results with"
-    required: false
-    default: "main"
+  relativeMode:
+    description: "Generate relative analysis based on the base branch"
+    required: true
+    default: "true"
 runs:
   using: "node20"
   main: "dist/index.js"
