feat: branch comparison

--- a/action.yml
+++ b/action.yml
@@ -44,7 +44,7 @@ inputs:
     required: false
     default: "false"
   relativeMode:
-    description: "Generate relative analysis based on the base branch"
+    description: "Generate a report comparing the current branch with the target branch"
     required: true
     default: "true"
 runs:
