--- a/action.yml
+++ b/action.yml
@@ -43,6 +43,11 @@ inputs:
     description: "Delete old comments on pull requests?"
     required: false
     default: "false"
+  relativeMode:
+    description:
+      "Generate a report comparing the current branch with the target branch"
+    required: true
+    default: "true"
 runs:
   using: "node20"
   main: "dist/index.js"
