--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,11 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "exclude": ["./dist", "./node_modules", "./__tests__", "./coverage", "./vitest.config.ts"]
+  "exclude": [
+    "./dist",
+    "./node_modules",
+    "./__tests__",
+    "./coverage",
+    "./vitest.config.ts"
+  ]
 }
