fix: ignore vitest config on eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,5 +10,6 @@
     "strict": true,
     "skipLibCheck": true
   },
+  "include": ["./src", "./vitest.config.ts", "./src/templates/reportTemplate.ts", "./src/templates/utils.ts", "./src/types.ts"],
   "exclude": ["./dist", "./node_modules", "./__tests__", "./coverage"]
 }
