fix: ignore vitest config on eslint

--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig.json",
-  "include": ["./src/templates/reportTemplate.ts", "./src/templates/utils.ts", "./src/types.ts"]
+  "include": [
+    "./src/templates/reportTemplate.ts",
+    "./src/templates/utils.ts",
+    "./src/types.ts"
+  ]
 }
