--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "clean": "rimraf dist pnpm-lock.yaml node_modules",
     "preinstall": "npx only-allow pnpm",
     "bundle": "pnpm run format:write && pnpm run package",
-    "ci-test": "pnpm jest",
+    "ci-test": "pnpm vitest --run",
     "format:write": "prettier --cache --write .",
     "format:check": "prettier --check .",
     "lint": "eslint --cache --cache-strategy content --report-unused-disable-directives .",
     "package": "pnpm ncc build src/index.ts -o dist --source-map --license licenses.txt",
     "package:watch": "pnpm run package --watch",
-    "test": "pnpm jest --coverage --verbose",
+    "test": "pnpm vitest --coverage --run",
     "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build",
     "preflight": "pnpm install && pnpm run format:write && pnpm run lint && pnpm run test && pnpm run package",
     "prepare": "husky"
@@ -22,35 +22,6 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "jest": {
-    "preset": "ts-jest",
-    "verbose": true,
-    "clearMocks": true,
-    "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "testMatch": [
-      "**/*.test.ts"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "coverageReporters": [
-      "json-summary",
-      "text",
-      "lcov"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "./src/**"
-    ]
-  },
   "dependencies": {
     "@actions/artifact": "2.1.9",
     "@actions/cache": "3.2.4",
@@ -59,21 +30,20 @@
     "execa": "9.4.0"
   },
   "devDependencies": {
-    "@types/jest": "^29.5.13",
     "@types/node": "22.5.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "@vercel/ncc": "^0.38.2",
+    "@vitest/coverage-v8": "2.1.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "husky": "9.1.6",
-    "jest": "^29.7.0",
     "prettier": "^3.3.3",
     "rimraf": "6.0.1",
-    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vitest": "2.1.1"
   },
   "packageManager": "pnpm@9.9.0"
 }
