--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "package:watch": "pnpm run package --watch",
     "test": "pnpm vitest --coverage --run",
     "prepublishOnly": "pnpm run clean && pnpm install && pnpm run build",
+    "release": "pnpm preflight && changelogen --release --bump && git push --follow-tags",
     "preflight": "pnpm install && pnpm run format:write && pnpm run lint && pnpm run test && pnpm run package",
     "prepare": "husky"
   },
@@ -35,6 +36,7 @@
     "@typescript-eslint/parser": "^7.18.0",
     "@vercel/ncc": "^0.38.2",
     "@vitest/coverage-v8": "2.1.2",
+    "changelogen": "0.5.7",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
