ci: run prp on publish only

--- a/.github/workflows/prp.yml
+++ b/.github/workflows/prp.yml
@@ -2,7 +2,7 @@ name: Run PRP Release Preprocessor
 
 on:
   release:
-    types: [created, edited, published]
+    types: [published]
 
 permissions:
   contents: write
