chore: bump deps

--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@actions/cache": "4.0.0",
     "@actions/core": "^1.11.1",
     "@actions/github": "^6.0.0",
-    "execa": "9.5.2"
+    "execa": "9.5.2",
+    "vmd-action": "link:"
   },
   "devDependencies": {
     "@types/node": "22.10.2",
